--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.5",
     "clsx": "^2.1.1",
+    "heroicons": "^2.1.5",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "use-debounce": "^10.0.2"
   },
   "devDependencies": {
     "@types/node": "^20",
